Programming languages and paradigms/Interpreter/examples/bad/nil_dereference.ho
func main() {
    var p *int = nil;
    var x int = *p; // error:3:17: nil dereference
}